Rename projects to enable use as packages

--- a/src/ApiClient/ApiClient.csproj
+++ b/src/ApiClient/ApiClient.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <DebugType>embedded</DebugType>
     <Nullable>enable</Nullable>
+    <RootNamespace>Dashboard.NET.Infrastructure</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
