--- a/tests/Dashboard.NET.Tests/Dashboard.NET.Tests.csproj
+++ b/tests/Dashboard.NET.Tests/Dashboard.NET.Tests.csproj
@@ -24,9 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Dashboard.NET.Cli\Dashboard.NET.Cli.csproj" />
-    <ProjectReference Include="..\..\src\Dashboard.NET.Domain\Dashboard.NET.Domain.csproj" />
-    <ProjectReference Include="..\..\src\Dashboard.NET.Infrastructure\Dashboard.NET.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\src\Cli\Cli.csproj" />
+    <ProjectReference Include="..\..\src\ApiClient\ApiClient.csproj" />
   </ItemGroup>
 
 </Project>
