chore: commit of changes made long ago, app successfully queries api

--- a/src/Cli/Cli.csproj
+++ b/src/Cli/Cli.csproj
@@ -35,6 +35,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ApiClient\ApiClient.csproj" />
+    <ProjectReference Include="..\Lib\Lib.csproj" />
   </ItemGroup>
 </Project>
